syntax="proto3";
package pb;
option go_package="../.;service";

message UserModel{
  // @inject_tag: json:"user_id"
  uint64 UserID=1;
  // @inject_tag: json:"user_name"
  string UserName=2;
  // @inject_tag: json:"nick_name"
  string NickName=3;
}